@@ -926,7 +926,6 @@ sub countAndPrintLeaks($$$)
     if (isLeopard()) {
         push @callStacksToExclude, (
             "glvmInitializeLLVM", # leak in OpenGL, Radar 5329956
-            "xmlDocPtrForString", # leak in libxml2, Radar 5329877
             "GetProcessForPID", # leak in Process Manager, Radar 5329842
             "HIView::SendGetPartRegionOrShape", # leak in High Level Toolbox, Radars 5329755 & 5329717
             "AddImageByTypeInfo", # leak in Launch Services, Radar 5329735
